force-app/main/default/staticresources/python/Disappear/src/objects/Indication__c.object
<CustomObject>
    <fields>
        <fullName>Indication_Desc__c</fullName>
        <label>Indication Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>Siebel RowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Indication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Indication_Desc__c</columns>
        <columns>SiebelRowId__c</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Indication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>